--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "simpleserver",
   "version": "1.0.0",
-  "main": "index.js","type": "module",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0"
   }
 }
